--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
-    "react-redux": "^8.0.2",
-    "uuid": "^8.3.2"
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
